响应式处理：实现对象的数据劫持

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>手写Vue2源码</title>
-</head>
-<body>
-  <script src="dist/umd/vue.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>手写Vue2源码</title>
+  </head>
+  <body>
+    <div id="app">{{name}}</div>
+    <script src="dist/umd/vue.js"></script>
+
+    <script>
+      // 根据Vue的用法，我们这里创建一个Vue实例，所以我们在源码中需要实现一个Vue类
+      let vm = new Vue({
+        el: "#app",
+        // data: {
+        //   name: "手写源码demo",
+        // },
+        data() { // data是函数
+          return {
+            name: "手写源码demo",
+          };
+        },
+      });
+      vm._data.name = {b: 1}
+      console.log('index.html vm', vm)
+    </script>
+  </body>
 </html>
