--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         },
       });
       vm._data.name = {b: 1}
+      vm._data.obj = {b: 1}
       console.log('index.html vm', vm)
     </script>
   </body>
