--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             arr: [1, 2, 3, 4]
           };
         },
+        // template: '<div id="app">{{name}}</div>'
+        // render() {
+        //   return h('div', {class: 'demo'}, 'hello')
+        // }
       });
-      vm._data.name = {b: 1}
-      vm._data.obj = {b: 1}
-      console.log('index.html vm', vm)
-      vm._data.arr.push({name: 'vue'})
+      // vm._data.name = {b: 1}
+      // vm._data.obj = {b: 1}
+      // console.log('index.html vm', vm)
+      // vm._data.arr.push({name: 'vue'})
     </script>
   </body>
 </html>
