构造AST语法树

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>手写Vue2源码</title>
   </head>
   <body>
-    <div id="app">{{name}}</div>
+    <div id="app">
+      <span>hello world</span>
+      <span>{{name}}</span>
+    </div>
     <script src="dist/umd/vue.js"></script>
 
     <script>
