codegen生成对应代码

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>手写Vue2源码</title>
   </head>
   <body>
-    <div id="app">
-      <span>hello world</span>
+    <div id="app" style="background:#EEE;">
+      <span style="color: brown;background:#999;">hello {{name}} world</span>
       <span>{{name}}</span>
     </div>
     <script src="dist/umd/vue.js"></script>
