实现初始化：将虚拟节点渲染成真实节点，并替换页面内容

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>手写Vue2源码</title>
   </head>
   <body>
-    <div id="app" style="background:#EEE;">
+    <div id="app">
       <span style="color: brown;background:#999;">hello {{name}} world</span>
       <span>{{name}}</span>
     </div>
