--- a/index.html
+++ b/index.html
@@ -34,12 +34,22 @@
       // vm._data.obj = {b: 1}
       // console.log('index.html vm', vm)
       // vm._data.arr.push({name: 'vue'})
+      // setTimeout(() => {
+      //   vm.name = "更新数据";
+      //   // vm._update(vm._render()); // 重新调用render方法产生虚拟dom，目前还没有进行diff
+      //   // 每次更新数据后手动调用上面的方法不合适，我们可以利用观察者模式来实现自动重新渲染视图
+      //   // 观察者模式： 属性是被观察者，刷新页面：“观察者”
+      // }, 3000)
+
+      // 测试异步更新
       setTimeout(() => {
-        vm.name = "更新数据";
-        // vm._update(vm._render()); // 重新调用render方法产生虚拟dom，目前还没有进行diff
-        // 每次更新数据后手动调用上面的方法不合适，我们可以利用观察者模式来实现自动重新渲染视图
-        // 观察者模式： 属性是被观察者，刷新页面：“观察者”
-      }, 3000)
+        vm.name = '111'
+        vm.name = '222'
+        vm.name = 'vue2'
+        vm.$nextTick(() => {
+          console.log(vm.$el)
+        })
+      }, 1000)
     </script>
   </body>
 </html>
